# bazel-dotnetcore-starter

./: .bazelrc  .gitignore  BUILD.bazel  BazelDotnetcoreStarter.csproj  BazelDotnetcoreStarter.sln  Program.cs  README.md  WORKSPACE  packages.json
App/: App.csproj  BUILD.bazel  Program.cs  Utils.cs
AspNetCore/: BUILD.bazel  Startup.cs  tmp.bazel
AspNetCore/Controllers/: ValuesController.cs
AspNetCore/Properties/: launchSettings.json
Utility/: BUILD.bazel  Utility.cs
Utility.Tests/: BUILD.bazel  UtilityTest.cs
