package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_dotnet//dotnet/private:context.bzl", "core_context_data")

# Context bindings
core_context_data(
    name = "core_context_data",
)

load("@io_bazel_rules_dotnet//dotnet:defs.bzl", "core_binary", "core_library", "dotnet_binary", "dotnet_import_library", "nuget_package")

core_library(
    name = "lib",
    srcs = [
        "Program.cs",
        "Startup.cs",
        "Controllers/ValuesController.cs",
    ],
    deps = [
        "@io_bazel_rules_dotnet//dotnet/stdlib.core:netstandard.dll",
        "@io_bazel_rules_dotnet//dotnet/stdlib.core:system.dll",
        "@microsoft.aspnet.webapi.client//:netcoreapp2.1_core",
        "@microsoft.aspnetcore//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.antiforgery//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.authentication//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.authentication.abstractions//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.authentication.cookies//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.authentication.core//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.authentication.facebook//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.authentication.google//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.authentication.jwtbearer//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.authentication.microsoftaccount//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.authentication.oauth//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.authentication.openidconnect//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.authentication.twitter//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.authentication.wsfederation//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.authorization//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.authorization.policy//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.connections.abstractions//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.cookiepolicy//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.cors//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.cryptography.internal//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.cryptography.keyderivation//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.dataprotection//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.dataprotection.abstractions//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.dataprotection.extensions//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.diagnostics//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.diagnostics.abstractions//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.diagnostics.entityframeworkcore//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.diagnostics.healthchecks//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.hostfiltering//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.hosting//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.hosting.abstractions//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.hosting.server.abstractions//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.html.abstractions//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.http//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.http.abstractions//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.http.connections//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.http.connections.common//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.http.extensions//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.http.features//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.httpoverrides//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.httpspolicy//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.identity//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.identity.entityframeworkcore//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.identity.ui//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.jsonpatch//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.localization//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.localization.routing//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.middlewareanalysis//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.mvc//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.mvc.abstractions//:netcoreapp2.1_core",
        #"@microsoft.aspnetcore.mvc.analyzers//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.mvc.apiexplorer//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.mvc.core//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.mvc.cors//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.mvc.dataannotations//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.mvc.formatters.json//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.mvc.formatters.xml//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.mvc.localization//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.mvc.razor//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.mvc.razor.extensions//:netcoreapp2.1_core",
        #"@microsoft.aspnetcore.mvc.razor.viewcompilation//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.mvc.razorpages//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.mvc.taghelpers//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.mvc.viewfeatures//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.nodeservices//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.owin//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.razor//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.razor.design//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.razor.language//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.razor.runtime//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.responsecaching//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.responsecaching.abstractions//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.responsecompression//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.rewrite//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.routing//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.routing.abstractions//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.server.httpsys//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.server.iis//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.server.iisintegration//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.server.kestrel//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.server.kestrel.core//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.server.kestrel.https//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.server.kestrel.transport.abstractions//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.server.kestrel.transport.sockets//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.session//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.signalr//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.signalr.common//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.signalr.core//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.signalr.protocols.json//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.spaservices//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.spaservices.extensions//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.staticfiles//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.websockets//:netcoreapp2.1_core",
        "@microsoft.aspnetcore.webutilities//:netcoreapp2.1_core",
        "@microsoft.codeanalysis.razor//:netcoreapp2.1_core",
        "@microsoft.entityframeworkcore//:netcoreapp2.1_core",
        "@microsoft.entityframeworkcore.abstractions//:netcoreapp2.1_core",
        # "@microsoft.entityframeworkcore.analyzers//:netcoreapp2.1_core",
        "@microsoft.entityframeworkcore.design//:netcoreapp2.1_core",
        "@microsoft.entityframeworkcore.inmemory//:netcoreapp2.1_core",
        "@microsoft.entityframeworkcore.relational//:netcoreapp2.1_core",
        "@microsoft.entityframeworkcore.sqlserver//:netcoreapp2.1_core",
        "@microsoft.entityframeworkcore.tools//:netcoreapp2.1_core",
        "@microsoft.extensions.caching.abstractions//:netcoreapp2.1_core",
        "@microsoft.extensions.caching.memory//:netcoreapp2.1_core",
        "@microsoft.extensions.caching.sqlserver//:netcoreapp2.1_core",
        "@microsoft.extensions.configuration//:netcoreapp2.1_core",
        "@microsoft.extensions.configuration.abstractions//:netcoreapp2.1_core",
        "@microsoft.extensions.configuration.binder//:netcoreapp2.1_core",
        "@microsoft.extensions.configuration.commandline//:netcoreapp2.1_core",
        "@microsoft.extensions.configuration.environmentvariables//:netcoreapp2.1_core",
        "@microsoft.extensions.configuration.fileextensions//:netcoreapp2.1_core",
        "@microsoft.extensions.configuration.ini//:netcoreapp2.1_core",
        "@microsoft.extensions.configuration.json//:netcoreapp2.1_core",
        "@microsoft.extensions.configuration.keyperfile//:netcoreapp2.1_core",
        "@microsoft.extensions.configuration.usersecrets//:netcoreapp2.1_core",
        "@microsoft.extensions.configuration.xml//:netcoreapp2.1_core",
        "@microsoft.extensions.dependencyinjection//:netcoreapp2.1_core",
        "@microsoft.extensions.dependencyinjection.abstractions//:netcoreapp2.1_core",
        "@microsoft.extensions.diagnosticadapter//:netcoreapp2.1_core",
        "@microsoft.extensions.diagnostics.healthchecks//:netcoreapp2.1_core",
        "@microsoft.extensions.diagnostics.healthchecks.abstractions//:netcoreapp2.1_core",
        "@microsoft.extensions.fileproviders.abstractions//:netcoreapp2.1_core",
        "@microsoft.extensions.fileproviders.composite//:netcoreapp2.1_core",
        "@microsoft.extensions.fileproviders.embedded//:netcoreapp2.1_core",
        "@microsoft.extensions.fileproviders.physical//:netcoreapp2.1_core",
        "@microsoft.extensions.filesystemglobbing//:netcoreapp2.1_core",
        "@microsoft.extensions.hosting//:netcoreapp2.1_core",
        "@microsoft.extensions.hosting.abstractions//:netcoreapp2.1_core",
        "@microsoft.extensions.http//:netcoreapp2.1_core",
        "@microsoft.extensions.identity.core//:netcoreapp2.1_core",
        "@microsoft.extensions.identity.stores//:netcoreapp2.1_core",
        "@microsoft.extensions.localization//:netcoreapp2.1_core",
        "@microsoft.extensions.localization.abstractions//:netcoreapp2.1_core",
        "@microsoft.extensions.logging//:netcoreapp2.1_core",
        "@microsoft.extensions.logging.abstractions//:netcoreapp2.1_core",
        "@microsoft.extensions.logging.configuration//:netcoreapp2.1_core",
        "@microsoft.extensions.logging.console//:netcoreapp2.1_core",
        "@microsoft.extensions.logging.debug//:netcoreapp2.1_core",
        "@microsoft.extensions.logging.eventsource//:netcoreapp2.1_core",
        "@microsoft.extensions.logging.tracesource//:netcoreapp2.1_core",
        "@microsoft.extensions.objectpool//:netcoreapp2.1_core",
        "@microsoft.extensions.options//:netcoreapp2.1_core",
        "@microsoft.extensions.options.configurationextensions//:netcoreapp2.1_core",
        "@microsoft.extensions.options.dataannotations//:netcoreapp2.1_core",
        "@microsoft.extensions.primitives//:netcoreapp2.1_core",
        "@microsoft.extensions.webencoders//:netcoreapp2.1_core",
        "@microsoft.net.http.headers//:netcoreapp2.1_core",
        "@system.io.pipelines//:netcoreapp2.1_core",
    ],
    visibility = ["//visibility:public"],
)

# bazel build //AspNetCore:docker
load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
    "container_push"
)

container_image(
    name = "docker",
    # References container_pull from WORKSPACE (above)
    base = "@aspnetcore//image",
    files = [":lib"],
    entrypoint = ["dotnet", "lib.dll"]
)

# bazel run --define push_tag=${IMAGE_TAG} --define push_repository=${REPOSITORY} //AspNetCore:push_container
container_push(
    name = "push_container",
    format = "Docker",
    image = ":docker",
    registry = "gcr.io",
    repository = "$(push_repository)",
    tag = "$(push_tag)",
)