package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_dotnet//dotnet/private:context.bzl", "core_context_data")

# Context bindings
core_context_data(
    name = "core_context_data",
)

load("@io_bazel_rules_dotnet//dotnet:defs.bzl", "core_binary", "core_library", "dotnet_binary", "dotnet_import_library", "nuget_package")

core_library(
    name = "utility",
    srcs = [
        "Utility.cs"
    ],
    deps = [
        "@io_bazel_rules_dotnet//dotnet/stdlib.core:system.dll",
        "@io_bazel_rules_dotnet//dotnet/stdlib.core:system.console.dll",
    ],
    visibility = ["//visibility:public"],
)

